--- a/public/404.html
+++ b/public/404.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>MidSale Consulting</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="X-UA-Compatible" content="ie=edge"/><title>MidSale Consulting</title><script defer="defer" src="/static/js/main.5e7e2f1d.js"></script><link href="/static/css/main.981d0520.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
