--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="robots" content="noindex, nofollow">
+    <!-- iPhone/iPad stöd för PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="MinApp">
+
+    <!-- Apple Touch Ikon (ersätt med din egen ikon) -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png">
     <title>MidSale Consulting</title>
   </head>
   <body>
